Fix width profile page on mobile mode

--- a/src/pages/masrudmubarok/index.module.css
+++ b/src/pages/masrudmubarok/index.module.css
@@ -94,7 +94,7 @@
 /* Responsif */
 @media (max-width: 768px) {
   .card {
-      width: 95vw;
+      width: 100vw;
       padding: 24px;
   }
 
